--- a/final_project_template.html
+++ b/final_project_template.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="FirstName LastName">
+<meta name="author" content="Yucheng Huang">
 
 <title>Yucheng’s Final Project</title>
 <style>
@@ -3096,7 +3096,7 @@ vertical-align: -.125em;
     <div>
     <div class="quarto-title-meta-heading">Author</div>
     <div class="quarto-title-meta-contents">
-             <p>FirstName LastName </p>
+             <p>Yucheng Huang </p>
           </div>
   </div>
     
@@ -3304,20 +3304,20 @@ The following objects are masked from &#39;package:base&#39;:
 <span id="cb11-17"><a href="#cb11-17" aria-hidden="true" tabindex="-1"></a></span>
 <span id="cb11-18"><a href="#cb11-18" aria-hidden="true" tabindex="-1"></a>tbl_baseline</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <div class="cell-output-display">
-<div id="njirboxyyq" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#njirboxyyq table {
+<div id="girqqcexbo" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#girqqcexbo table {
 font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
 }
-#njirboxyyq thead, #njirboxyyq tbody, #njirboxyyq tfoot, #njirboxyyq tr, #njirboxyyq td, #njirboxyyq th {
+#girqqcexbo thead, #girqqcexbo tbody, #girqqcexbo tfoot, #girqqcexbo tr, #girqqcexbo td, #girqqcexbo th {
 border-style: none;
 }
-#njirboxyyq p {
+#girqqcexbo p {
 margin: 0;
 padding: 0;
 }
-#njirboxyyq .gt_table {
+#girqqcexbo .gt_table {
 display: table;
 border-collapse: collapse;
 line-height: normal;
@@ -3342,11 +3342,11 @@ border-left-style: none;
 border-left-width: 2px;
 border-left-color: #D3D3D3;
 }
-#njirboxyyq .gt_caption {
+#girqqcexbo .gt_caption {
 padding-top: 4px;
 padding-bottom: 4px;
 }
-#njirboxyyq .gt_title {
+#girqqcexbo .gt_title {
 color: #333333;
 font-size: 125%;
 font-weight: initial;
@@ -3357,7 +3357,7 @@ padding-right: 5px;
 border-bottom-color: #FFFFFF;
 border-bottom-width: 0;
 }
-#njirboxyyq .gt_subtitle {
+#girqqcexbo .gt_subtitle {
 color: #333333;
 font-size: 85%;
 font-weight: initial;
@@ -3368,7 +3368,7 @@ padding-right: 5px;
 border-top-color: #FFFFFF;
 border-top-width: 0;
 }
-#njirboxyyq .gt_heading {
+#girqqcexbo .gt_heading {
 background-color: #FFFFFF;
 text-align: center;
 border-bottom-color: #FFFFFF;
@@ -3379,12 +3379,12 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-#njirboxyyq .gt_bottom_border {
+#girqqcexbo .gt_bottom_border {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#njirboxyyq .gt_col_headings {
+#girqqcexbo .gt_col_headings {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -3398,7 +3398,7 @@ border-right-style: none;
 border-right-width: 1px;
 border-right-color: #D3D3D3;
 }
-#njirboxyyq .gt_col_heading {
+#girqqcexbo .gt_col_heading {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3417,7 +3417,7 @@ padding-left: 5px;
 padding-right: 5px;
 overflow-x: hidden;
 }
-#njirboxyyq .gt_column_spanner_outer {
+#girqqcexbo .gt_column_spanner_outer {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3428,13 +3428,13 @@ padding-bottom: 0;
 padding-left: 4px;
 padding-right: 4px;
 }
-#njirboxyyq .gt_column_spanner_outer:first-child {
+#girqqcexbo .gt_column_spanner_outer:first-child {
 padding-left: 0;
 }
-#njirboxyyq .gt_column_spanner_outer:last-child {
+#girqqcexbo .gt_column_spanner_outer:last-child {
 padding-right: 0;
 }
-#njirboxyyq .gt_column_spanner {
+#girqqcexbo .gt_column_spanner {
 border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
@@ -3445,10 +3445,10 @@ overflow-x: hidden;
 display: inline-block;
 width: 100%;
 }
-#njirboxyyq .gt_spanner_row {
+#girqqcexbo .gt_spanner_row {
 border-bottom-style: hidden;
 }
-#njirboxyyq .gt_group_heading {
+#girqqcexbo .gt_group_heading {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3473,7 +3473,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 text-align: left;
 }
-#njirboxyyq .gt_empty_group_heading {
+#girqqcexbo .gt_empty_group_heading {
 padding: 0.5px;
 color: #333333;
 background-color: #FFFFFF;
@@ -3487,13 +3487,13 @@ border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 vertical-align: middle;
 }
-#njirboxyyq .gt_from_md > :first-child {
+#girqqcexbo .gt_from_md > :first-child {
 margin-top: 0;
 }
-#njirboxyyq .gt_from_md > :last-child {
+#girqqcexbo .gt_from_md > :last-child {
 margin-bottom: 0;
 }
-#njirboxyyq .gt_row {
+#girqqcexbo .gt_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3511,7 +3511,7 @@ border-right-color: #D3D3D3;
 vertical-align: middle;
 overflow-x: hidden;
 }
-#njirboxyyq .gt_stub {
+#girqqcexbo .gt_stub {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3523,7 +3523,7 @@ border-right-color: #D3D3D3;
 padding-left: 5px;
 padding-right: 5px;
 }
-#njirboxyyq .gt_stub_row_group {
+#girqqcexbo .gt_stub_row_group {
 color: #333333;
 background-color: #FFFFFF;
 font-size: 100%;
@@ -3536,13 +3536,13 @@ padding-left: 5px;
 padding-right: 5px;
 vertical-align: top;
 }
-#njirboxyyq .gt_row_group_first td {
+#girqqcexbo .gt_row_group_first td {
 border-top-width: 2px;
 }
-#njirboxyyq .gt_row_group_first th {
+#girqqcexbo .gt_row_group_first th {
 border-top-width: 2px;
 }
-#njirboxyyq .gt_summary_row {
+#girqqcexbo .gt_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -3551,14 +3551,14 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#njirboxyyq .gt_first_summary_row {
+#girqqcexbo .gt_first_summary_row {
 border-top-style: solid;
 border-top-color: #D3D3D3;
 }
-#njirboxyyq .gt_first_summary_row.thick {
+#girqqcexbo .gt_first_summary_row.thick {
 border-top-width: 2px;
 }
-#njirboxyyq .gt_last_summary_row {
+#girqqcexbo .gt_last_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3567,7 +3567,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#njirboxyyq .gt_grand_summary_row {
+#girqqcexbo .gt_grand_summary_row {
 color: #333333;
 background-color: #FFFFFF;
 text-transform: inherit;
@@ -3576,7 +3576,7 @@ padding-bottom: 8px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#njirboxyyq .gt_first_grand_summary_row {
+#girqqcexbo .gt_first_grand_summary_row {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3585,7 +3585,7 @@ border-top-style: double;
 border-top-width: 6px;
 border-top-color: #D3D3D3;
 }
-#njirboxyyq .gt_last_grand_summary_row_top {
+#girqqcexbo .gt_last_grand_summary_row_top {
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 5px;
@@ -3594,10 +3594,10 @@ border-bottom-style: double;
 border-bottom-width: 6px;
 border-bottom-color: #D3D3D3;
 }
-#njirboxyyq .gt_striped {
+#girqqcexbo .gt_striped {
 background-color: rgba(128, 128, 128, 0.05);
 }
-#njirboxyyq .gt_table_body {
+#girqqcexbo .gt_table_body {
 border-top-style: solid;
 border-top-width: 2px;
 border-top-color: #D3D3D3;
@@ -3605,7 +3605,7 @@ border-bottom-style: solid;
 border-bottom-width: 2px;
 border-bottom-color: #D3D3D3;
 }
-#njirboxyyq .gt_footnotes {
+#girqqcexbo .gt_footnotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -3618,7 +3618,7 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-#njirboxyyq .gt_footnote {
+#girqqcexbo .gt_footnote {
 margin: 0px;
 font-size: 90%;
 padding-top: 4px;
@@ -3626,7 +3626,7 @@ padding-bottom: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#njirboxyyq .gt_sourcenotes {
+#girqqcexbo .gt_sourcenotes {
 color: #333333;
 background-color: #FFFFFF;
 border-bottom-style: none;
@@ -3639,64 +3639,64 @@ border-right-style: none;
 border-right-width: 2px;
 border-right-color: #D3D3D3;
 }
-#njirboxyyq .gt_sourcenote {
+#girqqcexbo .gt_sourcenote {
 font-size: 90%;
 padding-top: 4px;
 padding-bottom: 4px;
 padding-left: 5px;
 padding-right: 5px;
 }
-#njirboxyyq .gt_left {
+#girqqcexbo .gt_left {
 text-align: left;
 }
-#njirboxyyq .gt_center {
+#girqqcexbo .gt_center {
 text-align: center;
 }
-#njirboxyyq .gt_right {
+#girqqcexbo .gt_right {
 text-align: right;
 font-variant-numeric: tabular-nums;
 }
-#njirboxyyq .gt_font_normal {
+#girqqcexbo .gt_font_normal {
 font-weight: normal;
 }
-#njirboxyyq .gt_font_bold {
+#girqqcexbo .gt_font_bold {
 font-weight: bold;
 }
-#njirboxyyq .gt_font_italic {
+#girqqcexbo .gt_font_italic {
 font-style: italic;
 }
-#njirboxyyq .gt_super {
+#girqqcexbo .gt_super {
 font-size: 65%;
 }
-#njirboxyyq .gt_footnote_marks {
+#girqqcexbo .gt_footnote_marks {
 font-size: 75%;
 vertical-align: 0.4em;
 position: initial;
 }
-#njirboxyyq .gt_asterisk {
+#girqqcexbo .gt_asterisk {
 font-size: 100%;
 vertical-align: 0;
 }
-#njirboxyyq .gt_indent_1 {
+#girqqcexbo .gt_indent_1 {
 text-indent: 5px;
 }
-#njirboxyyq .gt_indent_2 {
+#girqqcexbo .gt_indent_2 {
 text-indent: 10px;
 }
-#njirboxyyq .gt_indent_3 {
+#girqqcexbo .gt_indent_3 {
 text-indent: 15px;
 }
-#njirboxyyq .gt_indent_4 {
+#girqqcexbo .gt_indent_4 {
 text-indent: 20px;
 }
-#njirboxyyq .gt_indent_5 {
+#girqqcexbo .gt_indent_5 {
 text-indent: 25px;
 }
-#njirboxyyq .katex-display {
+#girqqcexbo .katex-display {
 display: inline-flex !important;
 margin-bottom: 0.75em !important;
 }
-#njirboxyyq div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#girqqcexbo div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
 height: 0px !important;
 }
 </style>
